--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,7 @@ html {
 
 body {
   /* margin: 0; */
-  /*min-height: 100%;*/ /* А если убрать height и вернуть min-height, то размер body станет правильным */
+  /*min-height: 100%;*/
   height: 100%;
   /*height: auto;*/
   /*height: 100vh;*/
@@ -22,11 +22,10 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  /*min-height: 100%;*/ /* А если убрать height и вернуть min-height, то размер body станет правильным */
+  /*min-height: 100%;*/
   height: 100%;
   /*height: auto;*/
   /*height: 100vh;*/
-  height: 100vh;
   outline: 5px solid rgb(124, 14, 187);
   outline-offset: -5px;
   background-color: rgba(110, 168, 170, 0.521);
