--- a/style/style.css
+++ b/style/style.css
@@ -36,10 +36,12 @@ header {
   background-color: aliceblue;
   outline: 5px solid rgb(187, 14, 14);
   outline-offset: -5px;
+  font-size: 50px;
 }
 
 footer {
   background-color: rgb(202, 248, 246);
   outline: 5px solid rgb(17, 14, 187);
   outline-offset: -5px;
+  font-size: 50px;
 }
